objects/IntegrationAddress__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Integration Account</label>
        <referenceTo>IntegrationAccount__c</referenceTo>
        <relationshipLabel>IntegrationAddresses</relationshipLabel>
        <relationshipName>IntegrationAddresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Id__c</fullName>
        <label>Company Id</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Integrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Integrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>